--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
   <meta name="description" content="">
 
   <link rel="stylesheet" href="css/main.css">
-  <title>Easy IO</title>
+  <title>Valaxy Tech</title>
 </head>
 
 <body>
-  <div class="navbar"><h1>EasyIO</h1></div>
+  <div class="navbar"><h1>ValaxyTech</h1></div>
 
   <div class="row">
     <div class="panel">
